Criação do primeiro tópico

--- a/index.html
+++ b/index.html
@@ -17,23 +17,30 @@
 <body>
   <div id="div_navbar">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="#">Home</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-          <a class="nav-item nav-link" href="#">Features</a>
-          <a class="nav-item nav-link" href="#">Pricing</a>
-          <a class="nav-item nav-link" href="#">Disabled</a>
+          <a class="nav-item nav-link active" href="#">Sobre mim <span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" href="#">Interesses</a>
+          <a class="nav-item nav-link" href="#">Skills</a>
+          <a class="nav-item nav-link" href="#">Quer ter o seu site?</a>
         </div>
       </div>
     </nav>
   </div>
-  <div id="div_body">
-   <p>Teste</p>
-    <p>Teste2</p>
+  <div id="div_sobre_mim" >
+    <h1>Sobre mim</h1>
+    <div class="topic">
+      
+      <p>Estudante de Engenharia de Software teste teste teste teste teste teste teste</p>
+      <br>
+      <br>
+
+    </div>
+   
   </div>
   
   <footer>
