--- a/index.html
+++ b/index.html
@@ -16,33 +16,45 @@
 
 <body>
   <div id="div_navbar">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-">
       <a class="navbar-brand" href="#">Home</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item nav-link active" href="#">Sobre mim <span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" href="#div_sobre_mim">Sobre mim <span class="sr-only">(current)</span></a>
           <a class="nav-item nav-link" href="#">Interesses</a>
-          <a class="nav-item nav-link" href="#">Skills</a>
+          <a class="nav-item nav-link" href="#div_skills">Skills</a>
           <a class="nav-item nav-link" href="#">Quer ter o seu site?</a>
         </div>
       </div>
     </nav>
   </div>
-  <div id="div_sobre_mim" >
+  <div id="div_sobre_mim" class="topic">
     <h1>Sobre mim</h1>
-    <div class="topic">
-      
-      <p>Estudante de Engenharia de Software teste teste teste teste teste teste teste</p>
+    <div class="topic_content">
+      <p>Estudante de Engenharia de Software | teste teste teste teste teste teste teste</p>
       <br>
       <br>
+    </div>  
+    <br>
+    <br>
 
-    </div>
-   
   </div>
-  
+  <div id="div_skills" class="topic">
+    <h1>Skills</h1>
+    <div class="topic_content">
+      <p>•	Conhecimento em JAVA
+        •	Conhecimento em SQL
+        •	Conhecimento em Desenvolvimento WEB (JSP e HTML)
+        •	Conhecimento em GIT
+        •	Conhecimento em Orientação a Objeto
+        </p>
+      <br>
+      <br>
+    </div>   
+  </div>
   <footer>
     <p>
       <a href="https://www.linkedin.com/in/messias-nunesmaia-4845b61a6/"><img src="./imagens/linkedin_icon.svg" alt="github_icon"></a>  |
