Atualização de background e tópicos

--- a/index.html
+++ b/index.html
@@ -35,8 +35,6 @@
     <h1>Sobre mim</h1>
     <div class="topic_content">
       <p>Estudante de Engenharia de Software | teste teste teste teste teste teste teste</p>
-      <br>
-      <br>
     </div>  
     <br>
     <br>
@@ -45,14 +43,23 @@
   <div id="div_skills" class="topic">
     <h1>Skills</h1>
     <div class="topic_content">
-      <p>•	Conhecimento em JAVA
-        •	Conhecimento em SQL
-        •	Conhecimento em Desenvolvimento WEB (JSP e HTML)
-        •	Conhecimento em GIT
-        •	Conhecimento em Orientação a Objeto
-        </p>
-      <br>
-      <br>
+      <ul>
+        <li>
+          Conhecimento em <strong>JAVA</strong> 
+        </li>
+        <li>
+          Conhecimento em Desenvolvimento <strong>WEB</strong>
+        </li>
+        <li>
+          Conhecimento em <strong>JSP</strong>, <strong>HTML</strong> e <strong>CSS</strong>
+        </li>
+        <li>
+          Conhecimento em <strong>GIT</strong>
+        </li>
+        <li>
+          Conhecimento em <strong>Orientação a Objeto</strong>
+        </li>
+      </ul>
     </div>   
   </div>
   <footer>
