Alteração nos nomes das divs

--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item nav-link" href="#div_sobre_mim">Sobre mim <span class="sr-only">(current)</span></a>
-          <a class="nav-item nav-link" href="#div_interesses">Interesses</a>
-          <a class="nav-item nav-link" href="#div_skills">Skills</a>
+          <a class="nav-item nav-link" href="#sobre_mim">Sobre mim <span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" href="#interesses">Interesses</a>
+          <a class="nav-item nav-link" href="#skills">Skills</a>
           <a class="nav-item nav-link" href="#">Quer ter o seu site?</a>
         </div>
       </div>
     </nav>
   </div>
-  <div id="div_sobre_mim" class="topic">
+  <div id="sobre_mim" class="topic">
     <h1>Sobre mim</h1>
     <div class="topic_content">
       <p>Estudante de Engenharia de Software | teste teste teste teste teste teste teste</p>
@@ -40,14 +40,14 @@
     <br>
 
   </div>
-  <div id="div_interesses" class="topic">
+  <div id="interesses" class="topic">
     <h1>Interesses</h1>
     <div class="topic_content">
       <p>Atuar como Back-End em desenvolvimento de sistemas voltados para <strong>WEB</strong> ou <<strong>Android</strong>.
          Aprimorar minhas habilidades e ganhar experiência profissional.</p>
     </div>
   </div>
-  <div id="div_skills" class="topic">
+  <div id="skills" class="topic">
     <h1>Skills</h1>
     <div class="topic_content">
       <ul>
