Atualização no testo sobre mim

--- a/index.html
+++ b/index.html
@@ -144,7 +144,11 @@
   <div id="sobre_mim" class="topic">
     <h1>Sobre mim</h1>
     <div class="topic_content">
-      <p>Estudante de Engenharia de Software | teste teste teste teste teste teste teste</p>
+      <p>Olá, meu nome é Messias Nunesmaia, tenho 20 anos e sou Estudante de Engenharia de Software (3º Semestre).
+        Sou bastante dedicado e aprendo rápido. Meus conhecimentos podem ser vistos na aba <em>"Skills"</em>. Tenho 
+        mais facilidade em Back-End para desenvolvimento WEB ou Android, em Front-End para desenvolvimento de páginas
+        estáticas (como esta). no fim da página é possível acompanhar meu
+        <em>"GitHub"</em></p>
     </div>
   </div>
   <div id="interesses" class="topic">
