Correção de bugs

--- a/index.html
+++ b/index.html
@@ -188,8 +188,7 @@
       <h2>Como deseja me contatar ?</h2>
       <p>
         <a href="https://www.instagram.com/messias_nunesmaia/" target="_blank"><img src="./imagens/instgram_icon.svg"
-            alt="instagram_icon">
-        </a> |
+            alt="instagram_icon"></a> |
         <a href="#formulario"><img src="./imagens/email_icon.svg" alt="email_icon">
         </a>
       </p>
@@ -337,6 +336,7 @@
         }
 
         @media (max-width: 600px) {
+
           #fs-frm [type="submit"],
           #fs-frm [type="reset"] {
             margin-bottom: 0;
