correção na sidebar

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </nav>
   </div>
   <div id="sidebar">
-    <marquee scrollamount="2/" direction="down" behavior="alternate">
+    <marquee scrollamount="2/" direction="down">
       public static Connection getConnection() {
       <br>
       try {
