--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Estudante de Engenharia de Software">
   <meta name="author" content="Messias Nunesmaia">
-  <link rel="shortcut icon" href="imagens/code_icon.png">
+  <link rel="shortcut icon" href="imagens/user_icon.svg">
   <link rel="stylesheet" href="personal_css/estilo.css" type="text/css">
   <script type="text/javascript" src="js/jquery-3.5.0.min.js"></script>
   <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
