Remoção da navbar no no mobile

--- a/index.html
+++ b/index.html
@@ -286,6 +286,29 @@
       </ul>
     </div>
   </div>
+  <div id="auto_propaganda" class="topic">
+    <h1>Quer ter o seu site ?</h1>
+    <div class="topic_content">
+      <p>Desenvolvo sites para :</p>
+        <ul>
+          <li>
+            Auto Divulgação
+          </li>
+          <li>
+            Divulgação De Produtos
+          </li>
+          <li>
+           Blogs
+          </li>
+          <li>
+            Preenchimento De Formulários
+          </li>
+          <li>
+            Mais...
+          </li>
+        </ul>
+    </div>
+  </div>
   <div id="contato" class="topic">
     <h1>Contato</h1>
     <div class="topic_content">
