Atualização na auto propaganda

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
   <div id="auto_propaganda" class="topic">
     <h1>Quer ter o seu site ?</h1>
     <div class="topic_content">
-      <p>Desenvolvo sites para :</p>
+      <h4>Desenvolvo sites para :</h4>
         <ul>
           <li>
             Auto Divulgação
