Atualização no link para instagram

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             $('html,body').animate({scrollTop:$(this.hash).offset().top}, 600);
        });
     });
-    </script>
+  </script>
 </head>
 
 <body>
@@ -322,9 +322,9 @@
     <div class="topic_content">
       <h2>Como deseja me contatar ?</h2>
       <p>
-        <a href="https://www.instagram.com/messias_nunesmaia/" target="_blank"><img src="./imagens/instgram_icon.svg"
+        <a href="https://www.instagram.com/messias_lsn/" target="_blank"><img src="./imagens/instgram_icon.svg"
             alt="instagram_icon"></a> |
-        <a href="#formulario"><img src="./imagens/email_icon.svg" alt="email_icon">
+        <a class="scroll" href="#formulario"><img src="./imagens/email_icon.svg" alt="email_icon">
         </a>
       </p>
     </div>
