Imlementação de perfil

--- a/index.html
+++ b/index.html
@@ -253,6 +253,9 @@
       }
     </marquee>
   </div>
+  <div id="perfil">
+    <img src="imagens/perfil.png" alt="foto_perfil">
+  </div>
   <div id="sobre_mim" class="topic">
     <h1>Sobre mim</h1>
     <div class="topic_content">
