Atualização nos tópicos: Sobre mim e Skills

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
   <div id="sobre_mim" class="topic">
     <h1>Sobre mim</h1>
     <div class="topic_content">
-      <p>Olá, meu nome é Messias Nunesmaia, tenho 20 anos e sou Estudante de Engenharia de Software (3º Semestre).
+      <p>Olá, meu nome é Messias Nunesmaia, tenho 20 anos e sou Estudante de Engenharia de Software (4º Semestre).
         Sou bastante dedicado e aprendo rápido. Meus conhecimentos podem ser vistos na aba <em>"Skills"</em>. Tenho
         mais facilidade em Back-End para desenvolvimento WEB ou Android, em Front-End para desenvolvimento de
         páginas
@@ -284,6 +284,9 @@
         </li>
         <li>
           Conhecimento em Desenvolvimento <strong>WEB</strong>
+        </li>
+        <li>
+          Conhecimento em <strong>Spring</strong>
         </li>
         <li>
           Conhecimento em <strong>JSP</strong>, <strong>HTML</strong> e <strong>CSS</strong>
@@ -315,7 +318,7 @@
             Preenchimento De Formulários
           </li>
           <li>
-            Mais...
+            MAIS...
           </li>
         </ul>
     </div>
