--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
 </head>
 
 <body>
+  <script type="text/javascript">
+    var userip;
+  </script>
+
+  <script type="text/javascript" src="https://l2.io/ip.js?var=userip"></script>
+
+  <script type="text/javascript">
+    document.write("Seu IP e:", userip);
+  </script>
+  
   <div id="div_navbar">
     <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg- fixed-top">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
