Atualização de ip

--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
       target="_blank" method="post">
         <fieldset id="fs-frm-inputs">
           <label for="full-name">Nome</label>
-          <input type="text" name="name" id="full-name" placeholder="Ex: Messias" required="" value=userip>
+          <input type="text" name="name" id="full-name" placeholder="Ex: Messias" required="">
           <label for="email-address">Endereço de E-mail</label>
           <input type="email" name="_replyto" id="email-address" placeholder="email@dominio.com" required="">
           <label for="telephone">Telefone</label>
