--- a/index.html
+++ b/index.html
@@ -355,15 +355,15 @@
       target="_blank" method="post">
         <fieldset id="fs-frm-inputs">
           <label for="full-name">Nome</label>
-          <input type="text" name="name" id="full-name" placeholder="Ex: Messias" required="">
+          <input type="text" name="Nome" id="full-name" placeholder="Ex: Messias" required="true">
           <label for="email-address">Endereço de E-mail</label>
-          <input type="email" name="_replyto" id="email-address" placeholder="email@dominio.com" required="">
+          <input type="email" name="E-mail" id="email-address" placeholder="email@dominio.com" required="true">
           <label for="telephone">Telefone</label>
-          <input type="telephone" name="telephone" id="telephone" placeholder="(99) 9 9999-9999" required="">
+          <input type="telephone" name="Telefone" id="telephone" placeholder="(99) 9 9999-9999" required="true">
           <label for="complaint">Com que finalidade seria o site?</label>
-          <textarea rows="6" name="complaint" id="complaint"
+          <textarea rows="6" name="Finalidade" id="complaint"
           placeholder="Ex: Atuo na área de direito e quero um site pessoal para auto divulgação e possíveis contatos de casos "
-          required=""></textarea>
+          required="true"></textarea>
           <input type="hidden" name="_subject" id="email-subject" value="Complaint Form Submission">
         </fieldset>
         <input type="submit" value="Enviar">
