--- a/index.html
+++ b/index.html
@@ -356,7 +356,9 @@
         <fieldset id="fs-frm-inputs">
           <input type="text" name="user-ip" id="user-ip" style="display: none;">
           <script>
-            document.getElementById("diapedido").value = userip;
+            function testeIp(){
+            document.getElementById("user-ip").value = userip;
+            }
           </script>
           <label for="full-name">Nome</label>
           <input type="text" name="Nome" id="full-name" placeholder="Ex: Messias" required="true">
