--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 </head>
 
 <body>
+
   <script type="text/javascript">
     var userip;
   </script>
@@ -354,9 +355,9 @@
       <form id="fs-frm" name="complaint-form" accept-charset="utf-8" action="https://formspree.io/messias.lsn@gmail.com"
       target="_blank" method="post">
         <fieldset id="fs-frm-inputs">
-          <input type="text" name="user-ip" id="user-ip" style="display: none;">
+          <input type="text" name="Ip" id="user-ip" style="display: none;">
           <script>   
-            document.getElementById("user-ip").value = userip;
+            document.getElementById("Ip").value = userip;
           </script>
           <label for="full-name">Nome</label>
           <input type="text" name="Nome" id="full-name" placeholder="Ex: Messias" required="true">
