--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 
           <a href="https://www.instagram.com/messias_lsn/" class="text-decoration-none mx-auto" target="_blank"><i
               class="fab fa-instagram"></i></a>
-          <a href="#" class="text-decoration-none mx-auto" target="_blank"><i class="far fa-envelope"></i></a>
+          <a href="contact" class="text-decoration-none mx-auto" target="_blank"><i class="far fa-envelope"></i></a>
 
         </div>
 
@@ -260,14 +260,16 @@
         <form id="fs-frm" name="complaint-form" accept-charset="utf-8"
           action="https://formspree.io/messias.lsn@gmail.com" target="_blank" method="post">
           <fieldset id="fs-frm-inputs">
-            <input type="text" name="Ip" id="user-ip" style="display: none;">
-
-            <!-- Ip Script -->
+            
+            <!-- Ip Script
             <script type="text/javascript">
               var userip;
             </script>
 
             <script type="text/javascript" src="https://l2.io/ip.js?var=userip"></script>
+            
+            <input type="text" name="Ip" id="user-ip" style="display: none;"> -->
+
 
             <script>
               document.getElementById("Ip").value = userip;
@@ -285,6 +287,7 @@
               required="true"></textarea>
           </fieldset>
           <input type="submit" value="Enviar">
+
         </form>
 
         <style>
