--- a/index.html
+++ b/index.html
@@ -268,12 +268,12 @@
 
             <script type="text/javascript" src="https://l2.io/ip.js?var=userip"></script>
             
-            <input type="text" name="Ip" id="user-ip" style="display: none;"> -->
+            <input type="text" name="Ip" id="user-ip" style="display: none;">
 
 
             <script>
               document.getElementById("Ip").value = userip;
-            </script>
+            </script> -->
 
             <label for="full-name">Nome</label>
             <input type="text" name="Nome" id="full-name" placeholder="Ex: Messias" required="true">
