Atualização no forms

--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@
         <div id="contactIcon" class="row col-7 col-sm-4 mx-auto py-3">
 
           <a href="https://www.instagram.com/messias_lsn/" class="text-decoration-none mx-auto" target="_blank"><i
-              class="fab fa-instagram"></i></a>
-          <a href="contact" class="text-decoration-none mx-auto" target="_blank"><i class="far fa-envelope"></i></a>
+              class="fab fa-instagram text-success"></i></a>
+          <a href="#contact" class="text-decoration-none mx-auto"><i class="far fa-envelope text-success"></i></a>
 
         </div>
 
@@ -258,22 +258,22 @@
       <div class="col-sm-12 col-md-5 mx-auto bg-site p-4">
 
         <form id="fs-frm" name="complaint-form" accept-charset="utf-8"
-          action="https://formspree.io/messias.lsn@gmail.com" target="_blank" method="post">
+          action="https://formspree.io/messias.lsn@gmail.com" method="post">
           <fieldset id="fs-frm-inputs">
-            
-            <!-- Ip Script
+
+            <!-- Ip Script -->
             <script type="text/javascript">
               var userip;
             </script>
 
             <script type="text/javascript" src="https://l2.io/ip.js?var=userip"></script>
-            
+
             <input type="text" name="Ip" id="user-ip" style="display: none;">
 
 
             <script>
               document.getElementById("Ip").value = userip;
-            </script> -->
+            </script>
 
             <label for="full-name">Nome</label>
             <input type="text" name="Nome" id="full-name" placeholder="Ex: Messias" required="true">
