Atualização de rolagem suave

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 
           <a href="https://www.instagram.com/messias_lsn/" class="text-decoration-none mx-auto" target="_blank"><i
               class="fab fa-instagram text-success"></i></a>
-          <a href="#contact" class="text-decoration-none mx-auto"><i class="far fa-envelope text-success"></i></a>
+          <a href="#contact" class="text-decoration-none mx-auto scroll"><i class="far fa-envelope text-success"></i></a>
 
         </div>
 
