Atualização no script de pegar ip

--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
 
 <body>
 
+  <!-- Ip Script -->
+  <script type="text/javascript">
+    var userip;
+  </script>
+
+  <script type="text/javascript" src="https://l2.io/ip.js?var=userip"></script>
+
   <!-- Navbar -->
   <div id="div_navbar">
     <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg- fixed-top">
@@ -222,7 +229,8 @@
 
           <a href="https://www.instagram.com/messias_lsn/" class="text-decoration-none mx-auto" target="_blank"><i
               class="fab fa-instagram text-success"></i></a>
-          <a href="#contact" class="text-decoration-none mx-auto scroll"><i class="far fa-envelope text-success"></i></a>
+          <a href="#contact" class="text-decoration-none mx-auto scroll"><i
+              class="far fa-envelope text-success"></i></a>
 
         </div>
 
@@ -261,12 +269,7 @@
           action="https://formspree.io/messias.lsn@gmail.com" method="post">
           <fieldset id="fs-frm-inputs">
 
-            <!-- Ip Script -->
-            <script type="text/javascript">
-              var userip;
-            </script>
 
-            <script type="text/javascript" src="https://l2.io/ip.js?var=userip"></script>
 
             <input type="text" name="Ip" id="user-ip" style="display: none;">
 
