Implementação de visualização por robos

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Estudante de Engenharia de Software">
   <meta name="author" content="Messias Nunesmaia">
+  <meta content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:5" name="robots" />
   <link rel="shortcut icon" href="images/user_icon.svg">
 
   <!-- Bootstrap CSS -->
