Implementação de google analytics

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta name="description" content="Estudante de Engenharia de Software">
   <meta name="author" content="Messias Nunesmaia">
   <meta content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:5" name="robots" />
+  <LINK href="https://www.messias.gq/" rel="canonical"></LINK>
+  <link href="https://www.messias.gq/" rel="amphtml" />
   <link rel="shortcut icon" href="images/user_icon.svg">
 
   <!-- Bootstrap CSS -->
@@ -23,6 +25,17 @@
     crossorigin="anonymous"></script>
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-175891785-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-175891785-1');
+</script>
+
+  <!-- Script Roll -->
   <script>
     jQuery(document).ready(function ($) {
       $(".scroll").click(function (event) {
