Criação de página para mais detalhes de sites

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
@@ -69,7 +69,7 @@
           <a class="nav-item nav-link scroll" href="#about">Sobre mim <span class="sr-only">(current)</span></a>
           <a class="nav-item nav-link scroll" href="#interests">Interesses</a>
           <a class="nav-item nav-link scroll" href="#skills">Skills</a>
-          <a class="nav-item nav-link scroll" href="#contato">Quer ter o seu site?</a>
+          <a class="nav-item nav-link scroll" href="#sites">Quer ter o seu site?</a>
           <a id="namePresentation" class="nav-item nav-link" aria-disabled="true">Olá, sou Messias !</a>
         </div>
       </div>
@@ -249,7 +249,7 @@
         </div>
 
         <div class="col-12 pt-5">
-          <a class="card-link text-success float-sm-center float-md-right" href="#" target="_blank">Saber Mais</a>
+          <a class="card-link text-success float-sm-center float-md-right" href="sites.html" target="_blank">Saber Mais</a>
         </div>
 
 
