Atualização de cores e posicionamento

--- a/sites.html
+++ b/sites.html
@@ -60,12 +60,12 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-item nav-link scroll" href="index.html"><i class="fas fa-arrow-left"></i><span
+                    <a class="nav-item nav-link scroll" href="./index.html"><i class="fas fa-arrow-left"></i><span
                             class="sr-only">(current)</span></a>
                     <a class="nav-item nav-link scroll" href="#informations">Informações</a>
                     <a class="nav-item nav-link scroll" href="#prices">Preços</a>
-                    <a class="nav-item nav-link scroll" href="#importation">Importância</a>
-                    <a id="namePresentation" class="nav-item nav-link" aria-disabled="true">Olá, sou Messias !</a>
+                    <a class="nav-item nav-link scroll" href="#importance">Importância</a>
+                    <a id="" class="nav-link" aria-disabled="true">Olá, sou Messias !</a>
                 </div>
             </div>
         </nav>
@@ -122,14 +122,15 @@
 
             <!-- Cards -->
             <div class="row">
+
                 <div class="col-sm-12 col-xl-3 ml-auto mb-5">
 
-                    <div class="card bg-site my-3">
+                    <div class="card bg-card-site my-3">
 
                         <img class="card-img-top" src="images/website_example.jpg" alt="website_example">
 
                         <div class="card-body">
-                            <h5 class="card-title">Site Simples</h5>
+                            <h5 class="card-title">Site Padrão</h5>
                             <h6 class="text-muted card-substitle mb-2">R$ 300,00</h6>
                             <p class="card-text">
                             <ul>
@@ -145,7 +146,29 @@
                                 <li>Domínio</li>
                             </ul>
                             </p>
-                            <a class="card-link text-success float-right" href="index.html/#contact">Adquirir</a>
+                            <a class="card-link text-success float-right href="index.html/#contact">Adquirir</a>
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <div class="col-sm-12 col-xl-3 mb-5">
+
+                    <div class="card bg-card-site my-3">
+
+                        <img class="card-img-top" src="images/website_example_2.png" alt="website_example_2">
+
+                        <div class="card-body">
+                            <h5 class="card-title">Páginas Adicionais</h5>
+                            <h6 class="text-muted card-subtitle mb-2">R$ 20,00</h6>
+                            <p class="card-text">O valor cobrado para <strong>cada</strong> páginal adicional (fora a
+                                página principal) é de <strong>R$ 20,00</strong> !
+                                <br>
+                                Páginas adicionais contém os mesmos benefícios da página inicial e são
+                                <strong>opicionais</strong>.
+                            </p>
+                            <a class="card-link text-success float-right" href="indigenas.html">Adquirir</a>
                         </div>
 
                     </div>
@@ -154,16 +177,19 @@
 
                 <div class="col-sm-12 col-xl-3 mr-auto mb-5">
 
-                    <div class="card bg-site my-3">
+                    <div class="card bg-card-site my-3">
 
                         <img class="card-img-top" src="images/website_example_2.png" alt="website_example_2">
 
                         <div class="card-body">
-                            <h5 class="card-title">Adicional</h5>
-                            <h6 class="text-muted card-subtitle mb-2">R$ 20,00</h6>
-                            <p class="card-text">As cotas são de fundamental importância para que indígenas tenham
-                                acesso à vida acadêmica !</p>
-                            <a class="card-link text-success" href="indigenas.html">Saber Mais</a>
+                            <h5 class="card-title">Domínio Internacional</h5>
+                            <h6 class="text-muted card-subtitle mb-2">R$ 40,00</h6>
+                            <p class="card-text">O custo para que seu site tenha um domínio internacional com terminação
+                                <strong>".com.br"</strong> é de <strong>R$ 40,00 anuais</strong> !
+                                <br>
+                                Este custo é totalmente dedicado ao registro do domínio e é <strong>opicinoal</strong>.
+                            </p>
+                            <a class="card-link text-success float-right" href="indigenas.html">Adquirir</a>
                         </div>
 
                     </div>
@@ -172,12 +198,14 @@
 
             </div>
 
-            <!-- SVG -->
-            <div class="row neon-site  py-5">
-                <a href="#interests" class="text-decoration-none mx-auto scroll"><i
-                        class="d-none d-md-block fa-3x fas fa-arrow-circle-down text-site"></i>
-                    <i class="d-sm-none fa-2x fas fa-arrow-circle-down text-site"></i></a>
-            </div>
+        </div>
+
+        <!-- SVG -->
+        <div class="d-none row neon-site  py-5">
+            <a href="#interests" class="text-decoration-none mx-auto scroll"><i
+                    class="d-none d-md-block fa-3x fas fa-arrow-circle-down text-site"></i>
+                <i class="d-sm-none fa-2x fas fa-arrow-circle-down text-site"></i></a>
+        </div>
 
         </div>
 
